# zibaldone

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CURSOR.md  GOVERNANCE.md  README.md  build_desktop.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml  package.yml  release.yml
backend/: .env.example  agent_index.py  app_config.py  app_state.py  article_note.py  audio_preflight.py  bench_vault.py  build_sidecar.sh  capture_inbox.py  enabled_models.json  ffmpeg_runtime.py  free_translate.py  inbox.py  job_executor.py  job_worker.py  local_llm_builtin.py  local_ocr.py  loop_cost.py  main.py  meeting_note.py  model_policy.py  news_source_to_note.py  news_vault_write.py  note_rollback.py  note_thoughts.py  obsidian.py  production_extractor.py  provider_runtime.py  providers.py  radar.py  related_notes.py  requirements.txt  retirement.py  run_e2e_backend.sh  run_tests.sh  runtime_usage.py  schemas.py  search_index.py  setup_asr_runtime.sh  sidecar_main.py  (+9 more)
backend/routers/: capture.py  library.py  meetings.py  providers.py  readiness.py  settings.py
backend/services/: library.py  meetings.py  readiness.py  security.py  settings.py
backend/tests/: test_agent_index.py  (+49 more)
docs/: architecture.md  privacy-and-network.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
public_overlay/: SECURITY.md
scripts/: product_readiness_check.py  smoke_bundled_sidecar.sh
(+82 files in other folders)
